[IndexFilters] Fix spacing on small screens

--- a/polaris-react/src/components/IndexFilters/IndexFilters.scss
+++ b/polaris-react/src/components/IndexFilters/IndexFilters.scss
@@ -89,7 +89,7 @@ $spinner-size: 20px;
 
   @media #{$p-breakpoints-md-down} {
     position: relative;
-    padding: var(--p-space-3) var(--p-space-4);
+    padding: var(--p-space-2);
     height: 3rem;
     border-left: var(--p-border-width-1) solid var(--p-color-border-subdued);
     gap: var(--p-space-2);
